--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -7,7 +7,7 @@
   display: grid;
   gap: 20px;
   max-width: 800px;
-  margin: 50px auto 80px;
+  margin: 30px auto 70px;
 }
 
 .left-side-contact {
